# ccpast

./: CLAUDE.md  Cargo.toml  README.ja.md  README.md
docs/superpowers/plans/: 2026-06-16-ccpast-v1.md  2026-06-17-fulltext-search.md
docs/superpowers/specs/: 2026-06-16-ccpast-design.md  2026-06-17-fulltext-search-design.md
src/: main.rs  parser.rs  reader.rs  resume.rs  scan.rs  session.rs  trash.rs  util.rs
src/ui/: confirm.rs  list.rs  mod.rs  reader.rs
tests/fixtures/: parser_samples.jsonl  session_only_tool_results.jsonl  session_with_text.jsonl
