[package]
name = "ccpast"
version = "0.1.1"
edition = "2021"
description = "Flat cross-cutting browser for Claude Code session history"
license = "MIT"
readme = "README.md"
repository = "https://github.com/SatoruItaya/ccpast"
homepage = "https://github.com/SatoruItaya/ccpast"
keywords = ["claude", "tui", "cli", "history", "session"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["docs/", ".github/"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.29"
dirs = "5"
libc = "0.2"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
